# pastry-chef-calculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  resources.qrc
cmake/: QtCommon.cmake
include/: app.h  database.h
include/tables/: metaInfo.h  units-transform.h  units.h
qml/: AddUnit.qml  AddUnitTransform.qml  CalcResult.qml  Common.qml  DbStatusView.qml  DeleteUnit.qml  DeleteUnitTransform.qml  Footer.qml  Header.qml  Main.qml  Prices.qml  Receipts.qml  UnitDelegate.qml  UnitSection.qml  UnitTransforms.qml  Units.qml  main.qml
src/: app.cpp  database.cpp  main.cpp
src/tables/: metaInfo.cpp  units-transform.cpp  units.cpp
